@@ -751,168 +751,6 @@ elem_to_string(gconstpointer elem_p)
     }
 }
 
-static gchar *
-xfce_notify_window_validate_escape_markup(const gchar *str)
-{
-    GString *gstr;
-    const gchar *p;
-    GQueue *open_elems;
-    gconstpointer tmp;
-
-    if(!str)
-        return NULL;
-
-    open_elems = g_queue_new();
-    gstr = g_string_sized_new(strlen(str));
-    p = str;
-
-    while(*p) {
-        if('<' == *p) {
-            if('b' == *(p+1) && '>' == *(p+2)) {
-                g_queue_push_head(open_elems, ELEM_B);
-                g_string_append(gstr, "<b>");
-                p += 3;
-            } else if('i' == *(p+1) && '>' == *(p+2)) {
-                g_queue_push_head(open_elems, ELEM_I);
-                g_string_append(gstr, "<i>");
-                p += 3;
-            } else if('u' == *(p+1) && '>' == *(p+2)) {
-                g_queue_push_head(open_elems, ELEM_U);
-                g_string_append(gstr, "<u>");
-                p += 3;
-            } else if('a' == *(p+1) && ' ' == *(p+2)) {
-                gchar *aend;
-
-                g_queue_push_head(open_elems, ELEM_A);
-
-                aend = strchr(p+3, '>');
-                if(!aend) {
-                    g_warning("Bad markup in <a>: %s", str);
-                    goto out_err;
-                }
-#if GTK_CHECK_VERSION(2,16,0)
-                /* only support links with gtk 2.16 */
-                g_string_append_len(gstr, p, aend - p + 1);
-#endif
-                p = aend + 1;
-            } else if(!strncmp(p+1, "img ", 4)) {
-                /* don't currently support images; extract alt text
-                 * if available */
-                gchar *imgend, *altbegin, *altend = NULL;
-
-                altbegin = strstr(p+5, "alt=\"");
-                if(altbegin) {
-                    altbegin += 5;
-                    altend = strchr(altbegin, '"');
-                    if(!altend) {
-                        g_warning("End of <img> alt text not found");
-                        goto out_err;
-                    }
-                }
-
-                imgend = strstr(altend ? altend+1 : p+4, "/>");
-                if(!imgend) {
-                    g_warning("Unclosed <img> tag");
-                    goto out_err;
-                }
-
-                if(altbegin) {
-                    /* put the alt text in the label */
-                    g_string_append_c(gstr, '[');
-                    g_string_append(gstr, _("image: "));
-                    p = altbegin;
-                    while(p < altend) {
-                        if(*p == '<')
-                            g_string_append(gstr, "&lt;");
-                        else if(*p == '>')
-                            g_string_append(gstr, "&gt;");
-                        else if(*p == '&')
-                            g_string_append(gstr, "&amp;");
-                        else
-                            g_string_append_c(gstr, *p);
-                        p++;
-                    }
-                    g_string_append_c(gstr, ']');
-                }
-
-                p = imgend + 2;
-            } else if('/' == *(p+1)) {
-                if('b' == *(p+2) && '>' == *(p+3)) {
-                    tmp = g_queue_pop_head(open_elems);
-                    if(tmp != ELEM_B) {
-                        g_warning("Bad markup: closing <b> when %s expected",
-                                  elem_to_string(tmp));
-                        goto out_err;
-                    }
-                    g_string_append(gstr, "</b>");
-                    p += 4;
-                } else if('i' == *(p+2) && '>' == *(p+3)) {
-                    tmp = g_queue_pop_head(open_elems);
-                    if(tmp != ELEM_I) {
-                        g_warning("Bad markup: closing <i> when %s expected",
-                                  elem_to_string(tmp));
-                        goto out_err;
-                    }
-                    g_string_append(gstr, "</i>");
-                    p += 4;
-                } else if('u' == *(p+2) && '>' == *(p+3)) {
-                    tmp = g_queue_pop_head(open_elems);
-                    if(tmp != ELEM_U) {
-                        g_warning("Bad markup: closing <u> when %s expected",
-                                  elem_to_string(tmp));
-                        goto out_err;
-                    }
-                    g_string_append(gstr, "</u>");
-                    p += 4;
-                } else if('a' == *(p+2) && '>' == *(p+3)) {
-                    tmp = g_queue_pop_head(open_elems);
-                    if(tmp != ELEM_A) {
-                        g_warning("Bad markup: closing <a> when %s expected",
-                                  elem_to_string(tmp));
-                        goto out_err;
-                    }
-#if GTK_CHECK_VERSION(2,16,0)
-                    g_string_append(gstr, "</a>");
-#endif
-                    p += 4;
-                } else {
-                    g_string_append(gstr, "&lt;");
-                    p++;
-                }
-            } else {
-                g_string_append(gstr, "&lt;");
-                p++;
-            }
-        } else if('>' == *p) {
-            g_string_append(gstr, "&gt;");
-            p++;
-        } else {
-            const gchar *next = g_utf8_next_char(p);
-
-            if(!next) {
-                g_critical("Bad UTF-8 in string");
-                goto out_err;
-            }
-
-            g_string_append_len(gstr, p, next - p);
-            p = next;
-        }
-    }
-
-    p = gstr->str;
-    g_string_free(gstr, FALSE);
-    g_queue_free(open_elems);
-
-    return (gchar *)p;
-
-out_err:
-    g_string_free(gstr, TRUE);
-    g_queue_free(open_elems);
-    return NULL;
-}
-
-
-
 GtkWidget *
 xfce_notify_window_new(void)
 {
@@ -981,7 +819,7 @@ xfce_notify_window_set_body(XfceNotifyWindow *window,
     g_return_if_fail(XFCE_IS_NOTIFY_WINDOW(window));
 
     if(body && *body) {
-        gchar *markup = xfce_notify_window_validate_escape_markup(body);
+        gchar *markup = g_markup_escape_text (body, -1);
         if(!markup)
             return;
 
