@@ -7,6 +7,9 @@ Version 0.2.3git:
     * Fix notifications not disappearing after clicking an action button.
     * Add a category to the settings dialog for Xfce4 Settings Manager.
     * Handle timeout correctly when smaller than fading time (bug #8580).
+    * Parse body with g_markup_escape_text which allows us to handle
+      span attributes missused by some clients and to parse strings with
+      "unusual" caracters such as & (bug #7773, #8187).
 
 Version 0.2.2 (06 August 2011):
 
